[package]
name = "bert_tokenizer"
version = "0.1.0"
authors = ["mklf <golifang1234@gmail.com>"]

[lib]
name = "bert_tokenizer"
path = "src/lib.rs"
crate-type= ["cdylib"]


#[[bin]]
#name = "bert_tokenizer"
#path = "src/main.rs"

[dependencies]
unicode-normalization = "0.1.7"
unicode_categories = "0.1.1"
indexmap = "1.0.2"
