[package]
name = "bert_tokenizer"
version = "0.1.0"
authors = ["mklf <golifang1234@gmail.com>"]

[lib]
name = "bert_tokenizer"
path = "src/lib.rs"
crate-type= ["cdylib","staticlib"]


#[[bin]]
#name = "bert_tokenizer"
#path = "src/main.rs"

[dependencies]
unicode-normalization = "0.1.13"
unicode_categories = "0.1.1"
indexmap = "1.8.0"

[profile.rel_with_deb]
inherits = "release"
debug = true